--- a/css/index.css
+++ b/css/index.css
@@ -14,13 +14,20 @@ body {
 }
 .card:hover {
     text-decoration: underline;
+	box-shadow: 0 0 3px 3px rgba(255, 215, 0, 0.5), 0 0 10px 10px rgba(255, 215, 0, 0.5);
 }
 .card-img-top {
 	min-width: 100px;
-	min-height: 100px;
+	width: 100px;
 	max-width: 100px;
-	max-height: 100px;
+	min-height: 90px;
+	height: 90px;
+	max-height: 90px;
 	display: block;
     margin: 0 auto;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.card-body {
+	padding-left: 0;
+	padding-right: 0;
 }
