--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,43 @@
 body {
 	background-color: #333;
-	color: #ccc;
-	max-width: 99%;
-	margin-top: 50px;
-	margin-left: 25px;
+	max-width: 99.9%;
 	overflow-x: hidden;
 }
+
 .card {
-	margin: 1rem;
+	background: transparent;
+	margin: 0.5rem;
+	padding: 0.5rem;
 	cursor: pointer;
-	padding-top: 12px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border: none;
+	display: inline-block;
+	vertical-align: top;
+	
+	min-width: 23.5%;
+	width: 23.5%;
+	max-width: 23.5%;
 }
+
 .card:hover {
     text-decoration: underline;
-	box-shadow: 0 0 3px 3px rgba(255, 215, 0, 0.5), 0 0 10px 10px rgba(255, 215, 0, 0.5);
 }
+
 .card-img-top {
-	min-width: 100px;
-	width: 100px;
-	max-width: 100px;
-	min-height: 90px;
-	height: 90px;
-	max-height: 90px;
 	display: block;
     margin: 0 auto;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+	min-height: 200px;
+	height: 200px;
+	max-height: 200px;
 }
+
+.card-img-top:hover {
+	box-shadow: 0 0 3px 3px rgba(255, 215, 0, 0.5), 0 0 10px 10px rgba(255, 215, 0, 0.5);
+}
+
 .card-body {
-	padding-left: 0;
-	padding-right: 0;
+	padding: 0;
+	color: #ccc;
+	text-shadow: 1px 1px black;
 }
