--- a/css/watch.css
+++ b/css/watch.css
@@ -4,13 +4,16 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	height: 100%;
+	min-height: 100%;
+}
+#container {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    height: 100vh;
 }
 #video-container {
-	position: relative;
-	width: 1024px;
-	height: 768px;
-	margin: 0;
-	padding: 0;
+	align-self: center;
 }
 #vid {
 	width: 100%;
@@ -19,23 +22,16 @@ body {
 	padding: 0;
 	z-index: 0;
 }
+#chat-container {
+	align-self: end;
+}
 #chat {
 	background: transparent;
-	position: absolute;
-	bottom: 120px;
-	width: 100%;
 	color: white;
 	text-shadow: 2px 2px black;
-	z-index: 2;
 }
 #chatinput {
-	position: absolute;
-	bottom: 70px;
-	width: 100%;
-	z-index: 1;
 	white-space: nowrap;
-	margin: 10px;
-	opacity: 0.05;
 }
 #username {
 	width: 18%;
