--- a/css/index.css
+++ b/css/index.css
@@ -16,20 +16,28 @@ body {
 	min-width: 23.5%;
 	width: 23.5%;
 	max-width: 23.5%;
+
+	height: 200px;
 }
 
 .card:hover {
     text-decoration: underline;
+	font-weight: bold;
 }
 
 .card-img-top {
-	display: block;
-    margin: 0 auto;
+	display: flex;
+	justify-content: center;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-	min-height: 200px;
+	width: auto;
+	max-width: 100%;
+
 	height: 200px;
-	max-height: 200px;
+	margin: auto;
+	/*max-height: 200px;*/
+
+	z-index: -1;
 }
 
 .card-img-top:hover {
@@ -40,4 +48,16 @@ body {
 	padding: 0;
 	color: #ccc;
 	text-shadow: 1px 1px black;
+	position: relative;
+	top: -220px;
+	text-align: center;
+}
+
+.duration {
+	color: #ccc;
+	text-shadow: 1px 1px black;
+	position: relative;
+	top: -30px;
+	text-align: center;
+	z-index: 1;
 }
