--- a/css/index.css
+++ b/css/index.css
@@ -15,21 +15,20 @@ body {
 }
 
 #grid {
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 .card {
 	background: transparent;
-	margin: 0.5rem;
-	padding: 0.5rem;
+	margin-top: 1rem;
 	cursor: pointer;
 	border: none;
 	display: inline-block;
 	vertical-align: top;
 	
-	min-width: 23.5%;
-	width: 23.5%;
-	max-width: 23.5%;
+	min-width: 24.8%;
+	width: 24.8%;
+	max-width: 24.8%;
 
 	height: 200px;
 }
@@ -38,14 +37,14 @@ body {
 	display: flex;
 	justify-content: center;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	z-index: -1;
+	border-radius: 10px;
 
 	width: auto;
 	max-width: 100%;
 
 	height: 200px;
 	margin: auto;
-
-	z-index: -1;
 }
 
 .card-img-top:hover {
