--- a/css/index.css
+++ b/css/index.css
@@ -14,10 +14,6 @@ body {
 	border: none;
 }
 
-#grid {
-	margin-top: 30px;
-}
-
 .card {
 	background: transparent;
 	margin-top: 1rem;
@@ -67,4 +63,43 @@ body {
 	top: -30px;
 	text-align: center;
 	z-index: 1;
+}
+
+.wrap-circles {
+	display: none;
+	min-height: 100vh;
+	min-width: 100vw;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	padding: auto;
+	background: transparent;
+	z-index: 9999;
+	position: fixed;
+}
+
+.circle {
+	position: absolute;
+	width: 150px;
+	height: 150px;
+	margin: 0.5rem;
+	border-radius: 50%;
+	overflow: hidden;
+}
+
+.inner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 115px;
+	height: 115px;
+	background: #333;
+	border-radius: 50%;
+	font-size: 1.85em;
+	font-weight: 300;
+	color: rgba(255, 255, 255, 0.75);
 }
