--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,10 @@ body {
 	border: none;
 }
 
+#grid {
+	margin: 40px, 0, 0, 40px; /* top and bottom */
+}
+
 .card {
 	background: transparent;
 	margin-top: 1rem;
